[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Debug.otf" type="DynamicFontData" id=1]
[ext_resource path="res://models/Hud/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://models/Hud/Settings.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=4]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 1
outline_color = Color( 0.486275, 0.384314, 0.113725, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 1
outline_color = Color( 0.486275, 0.384314, 0.113725, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 1
outline_color = Color( 0.486275, 0.384314, 0.113725, 1 )
font_data = ExtResource( 1 )

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect2" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 407.0
margin_top = 222.0
margin_right = 595.0
margin_bottom = 392.0
color = Color( 0.396078, 0.388235, 0.337255, 1 )

[node name="PauseLabel" type="Label" parent="."]
margin_left = 397.0
margin_top = 172.0
margin_right = 600.0
margin_bottom = 213.0
custom_fonts/font = SubResource( 4 )
text = "PAUSED GAME"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 414.0
margin_top = 223.0
margin_right = 584.0
margin_bottom = 390.0
custom_constants/separation = 0
alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 170.0
margin_bottom = 62.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.713726, 0.533333, 0.0352941, 1 )
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Resume"
flat = true
icon_align = 1

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 170.0
margin_bottom = 104.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.713726, 0.533333, 0.0352941, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Settings"
flat = true
icon_align = 1

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 170.0
margin_bottom = 146.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.713726, 0.533333, 0.0352941, 1 )
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Main Menu"
flat = true
icon_align = 1

[node name="Settings" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumetButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
